--- a/fortini-os/bootloader/Makefile
+++ b/fortini-os/bootloader/Makefile
@@ -1,9 +1,18 @@
-# Makefile para bootloader GRUB
+# Makefile para bootloader Fortini real (stage1+2)
+
+AS = nasm
+ASFLAGS = -f bin
+
+TARGET = boot.img
+SOURCE = boot.asm
 
 .PHONY: all clean
 
-all: 
-	@echo "Bootloader GRUB configurado"
+all: $(TARGET)
+
+$(TARGET): $(SOURCE)
+	@echo "[AS] Compilando bootloader..."
+	$(AS) $(ASFLAGS) -o $@ $(SOURCE)
 
 clean:
-	@echo "Limpeza do bootloader"
+	rm -f $(TARGET)
