--- a/fortini-os/kernel/Makefile
+++ b/fortini-os/kernel/Makefile
@@ -1,33 +1,38 @@
 CC = gcc
 AS = nasm
 LD = ld
-CFLAGS = -Wall -Wextra -ffreestanding -fno-stack-protector -m32 -O2
+OBJCOPY = objcopy
+
+CFLAGS = -Wall -Wextra -ffreestanding -fno-stack-protector -m32 -O2 -fno-builtin
 ASFLAGS = -f elf32
 LDFLAGS = -m elf_i386 -T linker.ld -nostdlib
 
 SOURCES = kernel.c
-OBJECTS = kernel.o kernel_asm.o
-TARGET = kernel.elf
+OBJECTS = kernel_start.o kernel.o
+TARGET_ELF = kernel.elf
+TARGET_BIN = kernel.bin
 
-all: $(TARGET)
+.PHONY: all clean
 
-$(TARGET): $(OBJECTS) linker.ld
+all: $(TARGET_BIN)
+
+$(TARGET_BIN): $(TARGET_ELF)
+	@echo "[OBJCOPY] Convertendo ELF para binário..."
+	$(OBJCOPY) -O binary $< $@
+
+$(TARGET_ELF): $(OBJECTS) linker.ld
 	@echo "[LD] Ligando kernel..."
-	$(LD) $(LDFLAGS) -o $@ kernel_asm.o kernel.o
+	$(LD) $(LDFLAGS) -o $@ $(OBJECTS)
 
-kernel_asm.o: kernel.asm
-	@echo "[AS] Compilando Assembly..."
-	$(AS) $(ASFLAGS) -o $@ kernel.asm
+kernel_start.o: kernel_start.asm
+	@echo "[AS] Compilando kernel_start.asm..."
+	$(AS) $(ASFLAGS) -o $@ $<
 
 kernel.o: kernel.c
 	@echo "[CC] Compilando kernel.c..."
-	$(CC) $(CFLAGS) -c -o $@ kernel.c
+	$(CC) $(CFLAGS) -c -o $@ $<
 
 clean:
-	rm -f $(OBJECTS) $(TARGET)
+	rm -f $(OBJECTS) $(TARGET_ELF) $(TARGET_BIN)
 
-install: $(TARGET)
-	mkdir -p /tmp/iso/boot
-	cp $(TARGET) /tmp/iso/boot/
-
-.PHONY: all clean install
+.PHONY: all clean
